--- a/compose.yaml
+++ b/compose.yaml
@@ -2,9 +2,10 @@ services:
   db:
     image: mysql:9.1.0
     environment:
-      - MYSQL_ROOT_PASSWORD=root
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: crypto_db
     volumes:
-    - b3_s1_crypto:/var/lib/mysql
+      - b3_s1_crypto:/var/lib/mysql
     ports:
       - 3306:3306
 
